# Pathce

./: .gitignore  README.md  experiment.sh  requirements.txt  rust-toolchain.toml
.github/: copilot-instructions.md
catalogs/: .gitignore
ceg/: .gitignore  README.md  runAcyclic  runCyclic  runCyclicOld
color/: .gitignore  Project.toml
color/scripts/: build.jl  build_max.jl  estimate.jl  estimate_max.jl
datasets/imdb/: .gitignore  ceg.sh  download.sh  process.sh
datasets/ldbc/: generate.sh  sf0.003.csv  sf0.003.txt
gcare/: .gitignore  CMakeLists.txt
gcare/include/: data_relations.h  memory.h  sketch.h
gcare/src/: bound_sketch.cc  correlated_sampling.cc  data_graph.cc  data_relations.cc  main.cc  sumrdf.cc
graphs/: .gitignore
pathce/: Cargo.toml  rustfmt.toml
pathce/resources/sf0.003/: City.csv  City_isPartOf_Country.csv  Comment_hasTag_Tag.csv  Comment_isLocatedIn_Country.csv  Company_isLocatedIn_Country.csv  Continent.csv  Country_isPartOf_Continent.csv  Person.csv  Person_knows_Person.csv  Person_studyAt_University.csv  Post_hasTag_Tag.csv  TagClass.csv  TagClass_isSubclassOf_TagClass.csv  Tag_hasType_TagClass.csv  University_isLocatedIn_City.csv
pathce/src/: catalog_builder.rs  counter.rs  error.rs  lib.rs  sample.rs  statistics.rs  test_utils.rs
pathce/src/binning/: greedy.rs  mod.rs
pathce/src/catalog/: duck.rs  mock.rs  mod.rs
pathce/src/ckmeans/: Cargo.toml
pathce/src/ckmeans/src/: errors.rs  lib.rs
pathce/src/common/: graph.rs  mod.rs  types.rs
pathce/src/estimate/: catalog_pattern.rs  join.rs  mod.rs
pathce/src/estimate/decompose/: heuristic.rs  mod.rs
pathce/src/factorization/: column.rs  table.rs
pathce/src/graph/: csr.rs  mod.rs
pathce/src/pattern/: canonical.rs  general.rs  mod.rs  path.rs  raw.rs
pathce/src/schema/: mod.rs  path.rs  path_v2.rs
patterns/glogs/: p1.json  p10.json  p11.json  p2.json  p4.json  p5.json  p6.json  p7.json  p8.json
patterns/job_manual/: q19.json  q19.sql  q20.json  q20.sql  q24.json  q24.sql  q26.json  q26.sql  q29.json  q29.sql  q33.json  q33.sql
patterns/knows_chain/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
patterns/lsqb/: q1.json  q2.json  q3.json  q4.json  q5.json  q6.json  q8.json  q9.json
scripts/: prepare_duckdb.sh
tools/: ceg2pattern.py  convert_aids_query.py  convert_aids_to_csv.py  convert_csv_to_gcare.py  convert_imdb.py  convert_schema.py  generate_ddl.py  merge_csv.py  pattern2ceg.py  pattern2gcare.py  pattern2gnce.py  pattern2sql.py  patterns2ceg.py  print_ceg_result.py  unique_vid.py  visualize_pattern.py
(+517 files in other folders)
