workspace = { members = ["src/ckmeans"] }

[package]
name = "pathce"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = false
panic = "abort"
overflow-checks = true

[dev-dependencies]
maplit = "1.0.2"

[dependencies]
thiserror = "1.0.61"
itertools = "0.13.0"
duckdb = { version = "1.0.0", features = ["bundled"] }
# maplit = "1.0.2"
serde = { version = "1.0.203", features = ["derive", "rc"] }
bincode = "1.3.3"
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
log = "0.4.21"
env_logger = "0.11.3"
petgraph = { version = "0.6.5", features = ["serde-1", "rayon"] }
# ordered-float = "4.2.0"
# tqdm = "0.7.0"
mimalloc = "0.1.42"
ckmeans = { path = "src/ckmeans" }
bimap = { version = "0.6.3", features = ["serde"] }
rayon = "1.10.0"
# crossbeam = "0.8.4"
fixedbitset = { version = "0.5.7", features = ["serde"] }
bytes = "1.6.0"
atomic-take = "1.1.0"
# multimap = "0.10.0"
# dashmap = { version = "5.5.3", features = ["inline", "rayon"] }
# im-rc = "15.1.0"
oneshot = "0.1.7"
murmur3 = "0.5.2"
ptree = "0.5.0"
rayon-scan = "0.1.1"
ahash = { version = "0.8.11", features = ["compile-time-rng"] }
num = "0.4.3"
rand = "0.8.5"
